# wikicitation-mcp

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  USAGE_GUIDE.md  annotate_utils.py  citation_templates.py  citation_utils.py  mcp_interface.R  progress.py  pyproject.toml  pytest.ini  r_bridge.py  server.py  wiki_api.py
config/: mcp_config.json
tests/: test_annotate_utils.py  test_bridge.py  test_citation_utils.py  test_server.py  test_wiki_api.py
