[project]
name = "wikicitation-mcp"
version = "0.3.0"
description = "MCP server providing ~50 Wikipedia citation-science tools for Claude"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.2.0",
    "fastmcp>=2.0.0",
    "httpx>=0.25",
    "mwparserfromhell>=0.6",
]

[project.scripts]
wikicitation-mcp = "server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["server.py", "r_bridge.py", "wiki_api.py", "citation_utils.py", "annotate_utils.py"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]
