[project]
name = "wikicitation-mcp"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "mcp[cli]>=1.0.0",
  "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "ruff",
  "mypy",
]

[project.scripts]
wikicitation-mcp = "server:mcp.run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
